vite swr changes and seo optimization part 1

--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omega Developer | Mahesh Muttinti</title>
+    <meta
+      name="description"
+      content="My Name is Mahesh Muttinti aka Omega Developer. I am an Tech Enthusiast, Anime Lover, Devotional Man, and Future Scientist"
+    />
+    <meta
+      name="keywords"
+      content="Omega Developer,Mahesh Muttinti,Mahesh,Mahesh M,maheshmuttinti,mahesh muttinti,maheshMuttinti,MaheshMuttinti,M Mahesh,React,react,React Native,react native,Mobile Application,mobile application,developer,Developer,web,web development,web application,Web Application,Full Stack developer,Full stack developer"
+    />
+    <link
+      rel="canonical"
+      href="https://omega-developer.maheshmuttintidev.in/"
+    />
+    <meta property="og:title" content="Omega Developer | Mahesh Muttinti" />
+    <meta
+      property="og:description"
+      content="My Name is Mahesh Muttinti aka Omega Developer. I am an Tech Enthusiast, Anime Lover, Devotional Man, and Future Scientist"
+    />
+    <meta property="og:url" content="https://maheshmuttintidev.in/" />
+    <meta property="og:site_name" content="Omega Developer | Mahesh Muttinti" />
+    <meta property="og:locale" content="en" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1920" />
+    <meta property="og:image:height" content="1080" />
+    <meta property="og:image:alt" content="Omega Developer | Mahesh Muttinti" />
+    <meta property="og:image" content="/omega_developer_2.jpg" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@MaheshMuttinti" />
+    <meta name="twitter:title" content="Omega Developer | Mahesh Muttinti" />
+    <meta
+      name="twitter:description"
+      content="My Name is Mahesh Muttinti aka Omega Developer. I am an Tech Enthusiast, Anime Lover, Devotional Man, and Future Scientist"
+    />
+    <meta name="twitter:image" content="/omega_developer_2.jpg" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="any" />
+    <meta
+      name="robots"
+      content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"
+    />
+    <!--app-head-->
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="root"><!--app-html--></div>
+    <script type="module" src="/src/entry-client.tsx"></script>
   </body>
 </html>
